--- a/config.toml
+++ b/config.toml
@@ -64,8 +64,8 @@ languageName = "North America"
 
 
 [Languages.uk]
-title = "Aventurine Europe"
+title = "Aventurine UK"
 weight = 2
-languageName = "Europe"
+languageName = "UK"
 
 
